--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.77MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.36MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.20MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.11MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-396.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-713.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.29MB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
   - {name: 🇮🇳 印度-2.34MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-19.03MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-991.5KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.52MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-1.90MB/s(Youtube:不良林), server: 103.90.220.27, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.90.220.27}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-396.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-713.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-991.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
